Bug 252731 - [WebGPU] "bgra8unorm-storage" is missing from GPUFeatureName
Summary: [WebGPU] "bgra8unorm-storage" is missing from GPUFeatureName
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-02-22 00:15 PST by Mike Wyrzykowski
Modified: 2023-02-23 22:30 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Wyrzykowski 2023-02-22 00:15:17 PST
[WebGPU] "bgra8unorm-storage" is missing from GPUFeatureName
Comment 1 Radar WebKit Bug Importer 2023-02-22 00:15:37 PST
<rdar://problem/105767446>
Comment 2 Mike Wyrzykowski 2023-02-22 00:25:36 PST
Pull request: https://github.com/WebKit/WebKit/pull/10502
Comment 3 EWS 2023-02-23 22:30:15 PST
Committed 260785@main (f5c8208c8ddb): <https://commits.webkit.org/260785@main>

Reviewed commits have been landed. Closing PR #10502 and removing active labels.