[WebGPU] "bgra8unorm-storage" is missing from GPUFeatureName https://bugs.webkit.org/show_bug.cgi?id=252731 <radar://105767446>

Reviewed by Myles C. Maxfield.

Add missing feature names and related enum values.

* Source/WebCore/Modules/WebGPU/GPUFeatureName.idl:
* Source/WebCore/Modules/WebGPU/GPUFeatureName.h:
(WebCore::convertToBacking):
* Source/WebCore/PAL/pal/graphics/WebGPU/Impl/WebGPUAdapterImpl.cpp:
(PAL::WebGPU::supportedFeatures):
* Source/WebCore/PAL/pal/graphics/WebGPU/Impl/WebGPUConvertToBackingContext.cpp:
(PAL::WebGPU::ConvertToBackingContext::convertToBacking):
* Source/WebCore/PAL/pal/graphics/WebGPU/WebGPUFeatureName.h:
* Source/WebGPU/WebGPU/HardwareCapabilities.mm:
(WebGPU::baseFeatures):
* Source/WebKit/Shared/WebGPU/WebGPUFeatureName.serialization.in:

Canonical link: https://commits.webkit.org/260785@main