Source/WebCore/PAL/pal/graphics/WebGPU/Impl/WebGPUConvertToBackingContext.cpp
@@ -216,6 +216,12 @@ WGPUFeatureName ConvertToBackingContext::convertToBacking(FeatureName featureNam
         return WGPUFeatureName_TimestampQuery;
     case FeatureName::IndirectFirstInstance:
         return static_cast<WGPUFeatureName>(WGPUFeatureName_IndirectFirstInstance);
+    case FeatureName::Bgra8unormStorage:
+        return static_cast<WGPUFeatureName>(WGPUFeatureName_BGRA8UnormStorage);
+    case FeatureName::ShaderF16:
+        return static_cast<WGPUFeatureName>(WGPUFeatureName_ShaderF16);
+    case FeatureName::Rg11b10ufloatRenderable:
+        return static_cast<WGPUFeatureName>(WGPUFeatureName_RG11B10UfloatRenderable);
     }
 }
 
